statistics added the best way to get